--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -6061,6 +6061,8 @@
     <!-- Page JS -->
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
     <script type="text/javascript">
+        document.getElementById("ik").className = "menu-item open active";
+        document.getElementById("personelbilgiyon").className = "menu-item active";
         function myKaydetFunction() {
             Swal.fire({
                 title: 'Formu kaydetmek istediğinize emin misiniz?',
