--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -5855,6 +5855,8 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript">
+        document.getElementById("ik").className = "menu-item open active";
+        document.getElementById("subebazi").className = "menu-item active";
         function myKaydetFunction() {
             Swal.fire({
                 title: 'Formu kaydetmek istediğinize emin misiniz?',
