--- a/NOVA/Views/IsEmri/Index.cshtml
+++ b/NOVA/Views/IsEmri/Index.cshtml
@@ -1368,6 +1368,8 @@
 
     <script>
         document.body.style.zoom = "100%";
+        document.getElementById("uretim").className = "menu-item open active";
+        document.getElementById("isemri").className = "menu-item active";
     </script>
 
 
