--- a/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
+++ b/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
@@ -60,8 +60,33 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script data-require="jquery@2.0.3" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="~/assets/vendor/css/scripts.js"></script>
+    
     <style>
+        .heart {
+            animation: heartbeat 1s infinite alternate;
+        }
 
+        @@keyframes heartbeat {
+            from {
+                opacity: 0;
+                transform: scale(0.9);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1.6);
+            }
+        }
+
+        .centercontent {
+            position: absolute;
+            max-width: 100%;
+            height: auto;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 5;
+        }
 
         #wrapper {
             margin: 0 auto;
@@ -175,7 +200,9 @@
 </head>
 
 <body onclose="close()">
+    
     <script>
+
        var userData = [];
        userData.push({ USERID: "@Request.Cookies["UserId"].Value", USERNAME: "@Request.Cookies["UserName"].Value", PLATFORM: "@Request.Cookies["Platform"].Value", LASTACTIVETIME: "@DateTime.Now.ToString()" });
        localStorage.userlist = JSON.stringify(userData[0]);
@@ -186,188 +213,7 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-                <div class="app-brand demo">
-                    <a href="@Url.Action("Index", "Home" )" class="app-brand-link">
-                        <span class="app-brand-logo demo">
-                            <img src="/Content/Images/efece_logo.png" alt class="w-px-200 h-auto" />
-                        </span>
-                    </a>
-
-                    <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
-                        <i class="bx bx-chevron-left bx-sm align-middle"></i>
-                    </a>
-                </div>
-
-                <div class="menu-inner-shadow"></div>
-
-                <ul class="menu-inner py-1">
-                    <!-- ANASAYFA -->
-                    <li class="menu-item">
-                        <a href="@Url.Action("Index", "Home" )" class="menu-link">
-                            <i class="menu-icon tf-icons bx bx-home-circle"></i>
-                            <div data-i18n="Analytics">Anasayfa</div>
-                        </a>
-                    </li>
-                    <li class="menu-header small text-uppercase">
-                        <span class="menu-header-text">Modüller</span>
-                    </li>
-                    <!-- Layouts -->
-                    <li class="menu-item" style="display: @ViewBag.DisplaySatis">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bx-dollar"></i>
-                            <div data-i18n="Layouts">Satış</div>
-                        </a>
-
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplayStok">
-                                <a href="@Url.Action("Index", "Satis" )" class="menu-link">
-                                    <div data-i18n="Without menu">Stok Değeri</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
-                                <a href="@Url.Action("DetayliSiparis", "Satis" )" class="menu-link">
-                                    <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-truck"></i>
-                            <div data-i18n="Layouts">Sevkiyat</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplaySiparisRaporu">
-                                <a href="@Url.Action("SiparisRaporu", "Sevkiyat" )" class="menu-link">
-                                    <div data-i18n="Without menu">Müşteri Siparişi Raporu</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.DisplaySaticiSiparisRaporu">
-                                <a href="@Url.Action("SaticiSiparisRaporu", "Sevkiyat")" class="menu-link">
-                                    <div data-i18n="Without menu">Satıcı Siparişi Raporu</div>
-                                </a>
-                            </li>
-                        </ul>
-
-                    </li>
-
-
-                    <li class="menu-item open active" style="display:none">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-hard-hat"></i>
-                            <div data-i18n="Account Settings">Üretim</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item active" style="display:none">
-                                <a href="@Url.Action("Index", "Uretim")" class="menu-link">
-                                    <div data-i18n="Without menu">Anlık Üretim</div>
-                                </a>
-                            </li>
-                        </ul>
-
-                    </li>
-                    <li class="menu-item active open" style="display: @ViewBag.DisplaySatinAlma">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bx-credit-card"></i>
-                            <div data-i18n="Authentications">Satın Alma</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item active" style="display: @ViewBag.DisplaySatinAlmaRaporu">
-                                <a href="@Url.Action("SatinAlmaRaporu", "SatinAlma" )" class="menu-link">
-                                    <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
-                                </a>
-                            </li>
-                        </ul>
-
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplayFinans">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-trending-up"></i>
-                            <div data-i18n="Misc">Finans</div>
-                        </a>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplayMuhasebe">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-calculator"></i>
-                            <div data-i18n="Misc">Muhasebe</div>
-                        </a>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.Display4">
-
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bx-male-female"></i>
-                            <div data-i18n="Misc">İnsan Kaynakları</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.Display5">
-                                <a href="@Url.Action("PersonelBilgi", "IK" )" class="menu-link">
-                                    <div data-i18n="Without menu">Personel Bilgi Girişi</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Display6">
-                                <a href="@Url.Action("PersonelBilgiYonetim", "IK" )" class="menu-link">
-                                    <div data-i18n="Without menu">Personel Bilgi Yönetimi</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Sube">
-                                <a href="@Url.Action("PersonelSubeYonetim", "IK" )" class="menu-link">
-                                    <div data-i18n="Without menu">Şube Bazında Personel Bilgi Yönetimi</div>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplayYonetim">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-sitemap"></i>
-                            <div data-i18n="Misc">Yönetim</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplayIstatistik">
-                                <a href="@Url.Action("Index", "Yonetim")" class="menu-link">
-                                    <div data-i18n="Without menu">Personel İstatistikleri</div>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.Display">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-report"></i>
-                            <div data-i18n="Misc">Yönetim Paneli</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.Display1">
-                                <a href="@Url.Action("KullaniciAyar", "YonetimPaneli" )" class="menu-link">
-                                    <div data-i18n="Without menu">Kullanıcı Ayarları</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Display2">
-                                <a href="@Url.Action("YetkiAyar", "YonetimPaneli" )" class="menu-link">
-                                    <div data-i18n="Without navbar">Kullanıcı Yetkileri</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Display3">
-                                <a href="#" class="menu-link">
-                                    <div data-i18n="Without navbar">Kullanıcı İstatistikleri</div>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item">
-                        <a href="javascript:void(0);" class="menu-link" data-i18n="Misc" data-bs-toggle="modal"
-                           data-bs-target="#cikis">
-                            <i class="menu-icon tf-icons bx bx-lock"></i>
-
-                            Çıkış
-
-                        </a>
-                    </li>
-
-                </ul>
-            </aside>
+            @Html.Partial("_Layout_menu")
             <!-- / Menu -->
             <!-- Layout container -->
             <div class="layout-page overflow-hidden">
@@ -797,8 +643,8 @@
                             <!-- Total Revenue -->
                             <div class="col-12 col-lg order-2 order-md-3 order-lg-2">
                                 <div class="card" onreset="refreshtable()">
-                                    <div class="centercontent">
-                                        <img id="spinner" src="~/assets/img/elements/load.gif" style="width:150px;display:none" />
+                                    <div class="centercontent" id="spinner" style="display:none">
+                                        <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:5vw" /></div>
                                     </div>
                                     <div class="row row-bordered g-0">
                                         <div class="col-md">
@@ -1489,8 +1335,8 @@
                             <!-- Total Revenue -->
                             <div class="col-12 col-lg order-2 order-md-3 order-lg-2 mb-4">
                                 <div class="card" onreset="refreshtable()" style="background-color:transparent">
-                                    <div class="spinner spinner-border spinner-border-lg text-primary" role="status" style="z-index:20;display:none" id="spinner1">
-                                        <span class="visually-hidden">Yükleniyor...</span>
+                                    <div class="centercontent" id="spinner1" style="display:none">
+                                        <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:5vw" /></div>
                                     </div>
                                     <div class="row row-bordered g-0">
                                         <div class="col-md">
@@ -1637,7 +1483,7 @@
                                                                 <td class="sticky-left position-sticky text-center w3-border-black" style="background-color: white;width:30px;border-style:solid !important">@updated_sipno</td>
                                                                 <td class="text-center">@item.TARIH.ToString("dd/MM/yy")</td>
                                                                 <td class="text-start">@updated_cari_isim (@item.CARI_DOVIZ_TIPI)</td>
-                                                                <td class="text-center">@item.STOK_ADI.Replace('Ý','İ')</td>
+                                                                <td class="text-center">@item.STOK_ADI.Replace('Ý', 'İ')</td>
                                                                 <td class="text-center">@String.Format("{0:N02}", item.MIKTAR)</td>
                                                                 <td class="text-center">@String.Format("{0:N02}", item.MIKTAR2)</td>
                                                                 @if (item.GERCEK_KALINLIK != null)
@@ -1757,6 +1603,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
+        document.getElementById("satinalma").className = "menu-item open active";
+        document.getElementById("satinalmadetsip").className = "menu-item active";
         $(document).ready(function () {
             $('.js-example-basic-multiple').select2({
                 placeholder: "Teslim Yeri"
