--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -144,6 +144,22 @@
             transform: translate(-50%, -50%);
             z-index: 5;
         }
+        .heart {
+            animation: heartbeat 1s infinite alternate;
+        }
+
+        @@keyframes heartbeat {
+            from {
+                opacity: 0.3 ;
+                transform: scale(0.32);
+               
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(0.40);
+            }
+        }
     </style>
     <script data-require="jquery@2.0.3" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="~/assets/vendor/css/scripts.js"></script>
@@ -503,8 +519,9 @@
             <!-- Total Revenue -->
             <div class="col-12 col-lg order-2 order-md-3 order-lg-2 mb-4">
                 <div class="card" onreset="refreshtable()">
-                    <div class="centercontent">
-                        <img id="process" src="~/assets/img/elements/load.gif" style="width:150px;display:none" />
+                    
+                    <div class="centercontent" id="process" style="display:unset">
+                        <div class="heart"><img src="~/images/novasaydam.png" style="max-width:15vw" /></div>
                     </div>
                     <div class="row row-bordered g-0">
                         <div class="col-md">
@@ -533,7 +550,7 @@
                                             int sayac = 1;
                                         }
 
-                                        @while (b<leng)
+                                        @while (b < leng)
                                         {
                                             String stokadi = "";
                                             String miktar = "";
@@ -1030,7 +1047,7 @@
 
                                             </tr>
                                             i++;
-                                                            b++;
+                                            b++;
                                         }
 
 
@@ -1084,6 +1101,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
+        document.getElementById("satis").className = "menu-item open active";
+        document.getElementById("detaylisip").className = "menu-item active";
         $(document).ready(function () {
             $('.js-example-basic-multiple').select2({
                 placeholder: "Teslim Yeri"
@@ -1097,6 +1116,7 @@
                 placeholder: "Döviz Tipi"
 
             });
+            document.getElementById("process").style.display = "none";
         });
     </script>
 
