--- a/NOVA/Views/Satis/FiyatsizHammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/FiyatsizHammaddeListesi.cshtml
@@ -303,6 +303,8 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
+        document.getElementById("satis").className = "menu-item open active";
+        document.getElementById("fabstok").className = "menu-item active";
         var upt = [];
         var filtereddata = [];
         $(document).ready(function () {
