--- a/NOVA/Views/Satis/HammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/HammaddeListesi.cshtml
@@ -35,6 +35,21 @@
 
 
     <style>
+        .heart {
+            animation: heartbeat 1s infinite alternate;
+        }
+
+        @@keyframes heartbeat {
+            from {
+                opacity: 0.3;
+                transform: scale(0.32);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(0.40);
+            }
+        }
         tbody tr:hover {
             background-color: transparent;
             color: black;
@@ -126,9 +141,9 @@
    
 
     <div class="container-fluid mt-1">
-        <div class="centercontent">
-            <img id="progress" src="~/assets/img/elements/load.gif" style="width:150px;margin-left:5%" />
-        </div>
+        <div class="centercontent" style="margin-left: 5%">
+            <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
+            </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm">
@@ -297,6 +312,8 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
+        document.getElementById("satis").className = "menu-item open active";
+        document.getElementById("fabstokfiyatli").className = "menu-item active";
         var upt = [];
         var filtereddata = [];
         var g = 0;
