--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -107,6 +107,8 @@
 
                     </div>
                     <script>
+                        document.getElementById("satis").className = "menu-item open active";
+                        document.getElementById("ziyaretplanlari").className = "menu-item active";
                         function musteritakip() {
                             $('#basicModal').modal({ backdrop: 'static', keyboard: false })  
                             $('#basicModal').modal('show');
