--- a/NOVA/Views/Shared/_Layout.cshtml
+++ b/NOVA/Views/Shared/_Layout.cshtml
@@ -60,215 +60,10 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-                <div class="app-brand demo">
-                    <a href="@Url.Action("Index", "Home")" class="app-brand-link">
-                        <span class="app-brand-logo demo">
-                            <img src="/Content/Images/efece_logo.png" alt class="w-px-200 h-auto" />
-                        </span>
-                    </a>
-
-                    <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
-                        <i class="bx bx-chevron-left bx-sm align-middle"></i>
-                    </a>
-                </div>
-
-                <div class="menu-inner-shadow"></div>
-
-                <ul class="menu-inner py-1">
-                    <!-- ANASAYFA -->
-                    @{
-                        <li class="menu-item">
-                            <a href="@Url.Action("Index", "Home")" class="menu-link">
-                                <i class="menu-icon tf-icons bx bx-home-circle"></i>
-                                <div data-i18n="Analytics">Anasayfa</div>
-                            </a>
-                        </li>
-                        <li class="menu-header small text-uppercase">
-                            <span class="menu-header-text">Modüller</span>
-                        </li>
-                        <!-- Layouts -->
-                        <li class="menu-item open active" style="display: @ViewBag.DisplaySatis">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bx-dollar"></i>
-                                <div data-i18n="Layouts">Satış</div>
-                            </a>
-
-                            <ul class="menu-sub">
-                                <li class="menu-item active" style="display: @ViewBag.DisplayStok">
-                                    <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Stok Değeri</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
-                                    <a href="@Url.Action("DetayliSiparis", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayFiyatliStok">
-                                    <a href="@Url.Action("HammaddeListesi", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">*Fabrika Stok</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayFiyatsizStok">
-                                    <a href="@Url.Action("FiyatsizHammaddeListesi", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Fabrika Stok</div>
-                                    </a>
-                                </li>
-                                
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
-                                    <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bxs-truck"></i>
-                                <div data-i18n="Layouts">Sevkiyat</div>
-                            </a>
-                            <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.DisplaySiparisRaporu">
-                                    <a href="@Url.Action("SiparisRaporu", "Sevkiyat")" class="menu-link">
-                                        <div data-i18n="Without menu">Müşteri Siparişi Raporu</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.DisplaySaticiSiparisRaporu">
-                                    <a href="@Url.Action("SaticiSiparisRaporu", "Sevkiyat")" class="menu-link">
-                                        <div data-i18n="Without menu">Satıcı Siparişi Raporu</div>
-                                    </a>
-                                </li>
-                            </ul>
-
-                        </li>
-
-                        <li class="menu-item" style="display:@ViewBag.DisplayUretim">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bxs-hard-hat"></i>
-                                <div data-i18n="Account Settings">Üretim</div>
-                            </a>
-                            <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.DisplayAnlikUretim">
-                                    <a href="@Url.Action("Index", "Uretim")" class="menu-link">
-                                        <div data-i18n="Without menu">Anlık Üretim</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.DisplayIsEmriKayit">
-                                    <a href="@Url.Action("Index", "IsEmri")" class="menu-link">
-                                        <div data-i18n="Without menu">İş Emri Giriş</div>
-                                    </a>
-                                </li>
-                            </ul>
-
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.DisplaySatinAlma">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bx-credit-card"></i>
-                                <div data-i18n="Authentications">Satın Alma</div>
-                            </a>
-                            <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.DisplaySatinAlmaRaporu">
-                                    <a href="@Url.Action("SatinAlmaRaporu", "SatinAlma" )" class="menu-link">
-                                        <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.DisplayFinans">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                                <i class="menu-icon tf-icons bx bx-trending-up"></i>
-                                <div data-i18n="Misc">Finans</div>
-                            </a>
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.DisplayMuhasebe">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                                <i class="menu-icon tf-icons bx bx-calculator"></i>
-                                <div data-i18n="Misc">Muhasebe</div>
-                            </a>
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.Display4">
-
-                            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bx-male-female"></i>
-                                <div data-i18n="Misc">İnsan Kaynakları</div>
-                            </a>
-                            <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.Display5">
-                                    <a href="@Url.Action("PersonelBilgi", "IK")" class="menu-link">
-                                        <div data-i18n="Without menu">Personel Bilgi Girişi</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.Display6">
-                                    <a href="@Url.Action("PersonelBilgiYonetim", "IK")" class="menu-link">
-                                        <div data-i18n="Without menu">Personel Bilgi Yönetimi</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.Sube">
-                                    <a href="@Url.Action("PersonelSubeYonetim", "IK")" class="menu-link">
-                                        <div data-i18n="Without menu">Şube Bazında Personel Bilgi Yönetimi</div>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.DisplayYonetim">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                                <i class="menu-icon tf-icons bx bx-sitemap"></i>
-                                <div data-i18n="Misc">Yönetim</div>
-                            </a>
-                            <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.Stok">
-                                    <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
-                                        <div data-i18n="Without menu">Stok Değeri</div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="menu-item" style="display: @ViewBag.Display">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bxs-report"></i>
-                                <div data-i18n="Misc">Yönetim Paneli</div>
-                            </a>
-                            <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.Display1">
-                                    <a href="@Url.Action("KullaniciAyar", "YonetimPaneli")" class="menu-link">
-                                        <div data-i18n="Without menu">Kullanıcı Ayarları</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.Display2">
-                                    <a href="@Url.Action("YetkiAyar", "YonetimPaneli")" class="menu-link">
-                                        <div data-i18n="Without navbar">Kullanıcı Yetkileri</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item" style="display: @ViewBag.Display3">
-                                    <a href="#" class="menu-link">
-                                        <div data-i18n="Without navbar">Kullanıcı İstatistikleri</div>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li class="menu-item">
-                            <a href="javascript:void(0);" class="menu-link" data-i18n="Misc" data-bs-toggle="modal"
-                               data-bs-target="#cikis">
-                                <i class="menu-icon tf-icons bx bx-lock"></i>
-
-                                Çıkış
-
-                            </a>
-                        </li>
-
-                    }
-
-
-
-                </ul>
-
-            </aside>
+            @Html.Partial("_Layout_menu")
 
             <div class="layout-page">
-                
+
 
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
                     <div class="modal-dialog modal-dialog-centered" role="document">
