--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -122,181 +122,7 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-                <div class="app-brand demo">
-                    <a href="@Url.Action("Index", "Home" )" class="app-brand-link">
-                        <span class="app-brand-logo demo">
-                            <img src="/Content/Images/efece_logo.png" alt class="w-px-200 h-auto" />
-                        </span>
-                    </a>
-
-                    <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
-                        <i class="bx bx-chevron-left bx-sm align-middle"></i>
-                    </a>
-                </div>
-
-                <div class="menu-inner-shadow"></div>
-
-                <ul class="menu-inner py-1">
-                    <!-- ANASAYFA -->
-                    <li class="menu-item">
-                        <a href="@Url.Action("Index", "Home" )" class="menu-link">
-                            <i class="menu-icon tf-icons bx bx-home-circle"></i>
-                            <div data-i18n="Analytics">Anasayfa</div>
-                        </a>
-                    </li>
-                    <li class="menu-header small text-uppercase">
-                        <span class="menu-header-text">Modüller</span>
-                    </li>
-                    <!-- Layouts -->
-                    <li class="menu-item" style="display: @ViewBag.DisplaySatis">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bx-dollar"></i>
-                            <div data-i18n="Layouts">Satış</div>
-                        </a>
-
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplayStok">
-                                <a href="@Url.Action("Index", "Satis" )" class="menu-link">
-                                    <div data-i18n="Without menu">Stok Değeri</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
-                                <a href="@Url.Action("DetayliSiparis", "Satis" )" class="menu-link">
-                                    <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-truck"></i>
-                            <div data-i18n="Layouts">Sevkiyat</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplaySiparisRaporu">
-                                <a href="@Url.Action("SiparisRaporu", "Sevkiyat" )" class="menu-link">
-                                    <div data-i18n="Without menu">Sipariş Raporu</div>
-                                </a>
-                            </li>
-                        </ul>
-
-                    </li>
-
-
-                    <li class="menu-item open active" style="display:@ViewBag.DisplayUretim">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-hard-hat"></i>
-                            <div data-i18n="Account Settings">Üretim</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item active" style="display: @ViewBag.DisplayAnlikUretim">
-                                <a href="@Url.Action("Index", "Uretim")" class="menu-link">
-                                    <div data-i18n="Without menu">Anlık Üretim</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.DisplayIsEmriKayit">
-                                <a href="@Url.Action("Index", "IsEmri")" class="menu-link">
-                                    <div data-i18n="Without menu">İş Emri Giriş</div>
-                                </a>
-                            </li>
-                        </ul>
-
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplaySatinAlma">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-credit-card"></i>
-                            <div data-i18n="Authentications">Satın Alma</div>
-                        </a>
-
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplayFinans">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-trending-up"></i>
-                            <div data-i18n="Misc">Finans</div>
-                        </a>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplayMuhasebe">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-calculator"></i>
-                            <div data-i18n="Misc">Muhasebe</div>
-                        </a>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.Display4">
-
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bx-male-female"></i>
-                            <div data-i18n="Misc">İnsan Kaynakları</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.Display5">
-                                <a href="@Url.Action("PersonelBilgi", "IK" )" class="menu-link">
-                                    <div data-i18n="Without menu">Personel Bilgi Girişi</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Display6">
-                                <a href="@Url.Action("PersonelBilgiYonetim", "IK" )" class="menu-link">
-                                    <div data-i18n="Without menu">Personel Bilgi Yönetimi</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Sube">
-                                <a href="@Url.Action("PersonelSubeYonetim", "IK" )" class="menu-link">
-                                    <div data-i18n="Without menu">Şube Bazında Personel Bilgi Yönetimi</div>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.DisplayYonetim">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
-                            <i class="menu-icon tf-icons bx bx-sitemap"></i>
-                            <div data-i18n="Misc">Yönetim</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplayIstatistik">
-                                <a href="@Url.Action("Index", "Yonetim")" class="menu-link">
-                                    <div data-i18n="Without menu">Personel İstatistikleri</div>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu-item" style="display: @ViewBag.Display">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-report"></i>
-                            <div data-i18n="Misc">Yönetim Paneli</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.Display1">
-                                <a href="@Url.Action("KullaniciAyar", "YonetimPaneli" )" class="menu-link">
-                                    <div data-i18n="Without menu">Kullanıcı Ayarları</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Display2">
-                                <a href="@Url.Action("YetkiAyar", "YonetimPaneli" )" class="menu-link">
-                                    <div data-i18n="Without navbar">Kullanıcı Yetkileri</div>
-                                </a>
-                            </li>
-                            <li class="menu-item" style="display: @ViewBag.Display3">
-                                <a href="#" class="menu-link">
-                                    <div data-i18n="Without navbar">Kullanıcı İstatistikleri</div>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item" data-i18n="Misc" data-bs-toggle="modal"
-                        data-bs-target="#cikis">
-                        <a href="javascript:void(0);" class="menu-link">
-                            <i class="menu-icon tf-icons bx bx-lock"></i>
-                            <div>
-                                Çıkış
-                            </div>
-                        </a>
-                    </li>
-
-                </ul>
-            </aside>
+            @Html.Partial("_Layout_menu")
             <!-- / Menu -->
             <!-- Layout container -->
             <div class="layout-page">
@@ -380,7 +206,7 @@
                         {
                             string dis = "";
 
-                            if (girdi.Where(y => y.MAK_KODU == item.MACHINE_CODE && (y.URETILDIMI == false|| y.URETILDIMI == null)).ToArray<NOVA.Models.uretimGirdiModel>().Length == 0 && cikti.Where(y => y.MAK_KODU == item.MACHINE_CODE && (y.URETILDIMI == false || y.URETILDIMI == null)).ToArray<NOVA.Models.UretimBekleyenCiktiModel>().Length == 0) { dis = "none"; } else { dis = "flex"; }
+                            if (girdi.Where(y => y.MAK_KODU == item.MACHINE_CODE && (y.URETILDIMI == false || y.URETILDIMI == null)).ToArray<NOVA.Models.uretimGirdiModel>().Length == 0 && cikti.Where(y => y.MAK_KODU == item.MACHINE_CODE && (y.URETILDIMI == false || y.URETILDIMI == null)).ToArray<NOVA.Models.UretimBekleyenCiktiModel>().Length == 0) { dis = "none"; } else { dis = "flex"; }
 
                             <div class="row" style="background-color:lightsteelblue ;border-top-left-radius: 30px; border-top-right-radius: 30px; border-top-style: solid; border-right-style: solid; border-left-style: solid; display: @dis "><div class="col-5"> </div><div class="col-2"><h3 style="text-align:center" class="mt-3">@item.MACHINE_CODE</h3> </div><div class="col-5"></div></div>
 
@@ -402,7 +228,7 @@
                                                     @Html.TextBoxFor(Model => Model.Item1.URETIM_ONAY_ID, new { @Value = ViewBag.Id, Style = "display: none;" })
                                                     @Html.TextBoxFor(Model => Model.Item1.URETILDIMI, new { @Value = true, Style = "display: none;" })
                                                     @Html.TextBoxFor(Model => Model.Item1.INCKEY, new { @Value = item1.INCKEY, Style = "display: none;" })
-                                                <button class="btn btn-grad-2 float-end w-100" type="button" value="@item1.INCKEY" name="@b" onclick="myUpdateFunction1(this.value,this.name)"> @item1.ISEMRINO &#160 |   &#160 @item1.GIRDI_SERI_NO  &#160 &#160  | &#160 &#160 @string.Format("{0:N0}", @item1.GIRDI_MIKTAR2)  @item1.GIRDI_OLCU_BR2 </button>
+                                                    <button class="btn btn-grad-2 float-end w-100" type="button" value="@item1.INCKEY" name="@b" onclick="myUpdateFunction1(this.value,this.name)"> @item1.ISEMRINO &#160 |   &#160 @item1.GIRDI_SERI_NO  &#160 &#160  | &#160 &#160 @string.Format("{0:N0}", @item1.GIRDI_MIKTAR2)  @item1.GIRDI_OLCU_BR2 </button>
                                                     <button class="btn btn-grad" type="submit" style="visibility:hidden"></button>
                                                 }
                                             </div>
@@ -517,6 +343,7 @@
         </div>
     </div>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     @{
         if (ViewBag.Message != null)
         {
@@ -547,7 +374,8 @@ else
 }
     }
     <script type="text/javascript">
-
+        document.getElementById("uretim").className = "menu-item open active";
+        document.getElementById("anlikuretim").className = "menu-item active";
         function myUpdateFunction(clicked_value,name) {
             
             Swal.fire({
