--- a/NOVA/Views/Uretim/IsEmri.cshtml
+++ b/NOVA/Views/Uretim/IsEmri.cshtml
@@ -92,7 +92,8 @@
     <script src="~/footable/js/footable.core.js"></script>
     <script src="~/footable/js/footable.paging.js"></script>
     <script>
-
+        document.getElementById("uretim").className = "menu-item open active";
+        document.getElementById("isemri").className = "menu-item active";
         jQuery(document).ready(function () {
 
             jQuery.getJSON('http://192.168.2.13:83/api/IsEmri/VW', function (data) {
