--- a/NOVA/Views/YonetimPaneli/Kullanici.cshtml
+++ b/NOVA/Views/YonetimPaneli/Kullanici.cshtml
@@ -283,6 +283,8 @@
     <!-- / Layout wrapper -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript">
+        document.getElementById("yonetimpaneli").className = "menu-item open active";
+        document.getElementById("kullanici").className = "menu-item active";
         function myUpdateFunction(clicked_value) {
             var s = "submitbutton" + clicked_value;
             Swal.fire({
