--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -5320,6 +5320,8 @@
 
     </script>
     <script>
+        document.getElementById("ik").className = "menu-item open active";
+        document.getElementById("personelbilgi").className = "menu-item active";
         function readURL(input) {
             document.getElementById("resimKaydet").removeAttribute("disabled")
             if (input.files && input.files[0]) {
