--- a/NOVA/Views/YonetimPaneli/Yetki.cshtml
+++ b/NOVA/Views/YonetimPaneli/Yetki.cshtml
@@ -581,7 +581,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
-
+        document.getElementById("yonetimpaneli").className = "menu-item open active";
+        document.getElementById("yetki").className = "menu-item active";
         function myUpdateFunction(getvalue) {
             var name = "guncelle" + getvalue;
             Swal.fire({
